# bedrock-claude-streamlit-app

./: .env.example  .gitignore  README.md  pyproject.toml
src/bedrock_claude_streamlit_app/: __init__.py  __main__.py  app.py
