[project]
name = "bedrock-claude-streamlit-app"
version = "0.1.0"
description = "bedrock claude streamlit app"
authors = [
    { name = "limbo", email = "pythonsuper@gmail.com" }
]
dependencies = [
    "boto3>=1.34.69",
    "langchain>=0.1.13",
    "streamlit>=1.32.2",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"app" = "bedrock_claude_streamlit_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.4",
    "isort>=5.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_claude_streamlit_app"]
